affichage des notes